--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX SEGUNDA 1-->
-                23/10
+                06/11
               </a>
             </h3>
             <p>
@@ -40,6 +40,7 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
+              <li> CALDO DE OVO </li>
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
@@ -48,7 +49,7 @@
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
-              <li> SOPA </li>
+              <!-- <li> SOPA </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
             </p></br>
@@ -64,7 +65,7 @@
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> CALABRESA E ACEBOLADA </li> -->
               <!-- <li> COSTELA ASSADA DE FORNO </li> -->
-              <li> COSTELA AO MOLHO </li>
+              <!-- <li> COSTELA AO MOLHO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> ESTROGONOFE DE FRANGO </li> -->
@@ -82,9 +83,9 @@
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> FRANGO XADREZ </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
-              <!-- <li> GUISADINHO SUÍNO </li> -->
+              <li> GUISADO SUÍNO </li>
               <!-- <li> ISCA DE CALABRESA </li> -->
-              <li> ISCA MISTA CALABRESA E FRANGO </li>
+              <!-- <li> ISCA MISTA CALABRESA E FRANGO </li> -->
               <!-- <li> ISCA DE CARNE </li> O </li> -->
               <!-- <li> ISCA DE FRANGO-->
               <!-- <li> ISCA DE FIGADO </li> -->
@@ -95,7 +96,7 @@
               <!-- <li> OVO FRITO E CALABRESA</li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
+              <li> PICADINHO RICO </li>
               <!-- <li> PIRARUCU A MILANESA </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
               <!-- <li> ESTROGONOFE DE CARNE </li> -->
@@ -113,6 +114,7 @@
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
+              <li> CROISSANT MISTO </li>
               <!-- <li> CUSCUZ COM CAFE E LEITE </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
@@ -127,7 +129,7 @@
               <!-- <li> SALGADO </li> -->
               <!-- <li> PIZZA </li> -->
               <!-- <li> X SALADA </li> -->
-              <li> VITAMINADA COM BOLACHA </li>
+              <!-- <li> VITAMINADA COM BOLACHA </li> -->
             </ul>
             </p>
           </div>
@@ -140,7 +142,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
                 
                 <!-- DDDXX TERÇA -->
-                24/10
+                07/11
               </a>
             </h3>
             <p>
@@ -153,11 +155,13 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> BOLINHO DE CHUVA </li> -->
               <!-- <li> BATATA DOCE </li> -->
+              <!-- <li> CROISSANT MISTO </li> -->
               <!-- <li> FRUTAS </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <li> OVO FRITO </li>
+              <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
+              <li> PANQUECA AMERICANA</li>
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
@@ -183,17 +187,17 @@
               <!-- <li> COZIDÃO MANAUARA </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
-              <li> ESCONDIDINHO DE CARNE </li>
+              <!-- <li> ESCONDIDINHO DE CARNE </li> -->
               <!-- <li> ESTROGONOFE DE CARNE </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FIGADO ACEBOLADO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <!-- <li> FRANGO ASSADO </li> -->
+              <li> FRANGO ASSADO </li>
               <!-- <li> FRANGO CROCANTE </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
-              <li> FRANGO FRITO </li>
+              <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO COM BATATAS</li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> HAMBÚRGUER </li> -->
@@ -206,6 +210,7 @@
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> LINGUA AO MOLHO </li> -->
+              <li> MACARRONADA BOLONHESA </li>
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> OMELETE </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
@@ -229,10 +234,10 @@
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
-              <!-- <li> BOLO </li> -->
+              <li> BOLO </li>
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <li> MISTO </li>
+              <!-- <li> MISTO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
@@ -255,7 +260,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX QUARTA -->
-                25/10
+                08/11
 
               </a>
             </h3>
@@ -267,7 +272,7 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BATATA DOCE </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
               <!-- <li> BOLINHO DE CHUVA </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
@@ -275,7 +280,7 @@
               <!-- <li> MINGAU DE AVEIA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li>; -->
-              <!-- <li> OVO FRITO </li> -->
+              <li> OVO FRITO </li>
               <!-- <li> PATÊ </li> -->
               <!-- <li> PATÊ DE SARDINHA </li> -->
               <!-- <li> PUPUNHA </li> -->
@@ -328,13 +333,13 @@
               <!-- <li> MACARRONADA DE CAMARÃO </li> -->
               <!-- <li> MIX (OVO, CALABRESA E SALSICHA) </li> -->
               <!-- <li> OVO FRITO </li> -->
-              <li> PANELADA </li>
+              <!-- <li> PANELADA </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PANQUECAS DE FRANGO </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> PIRARUCU A MILANESA </li> -->
-              <!-- <li> REFRIGERANTE </li> -->
+              <li> VACA ATOLADA </li>
               <!-- <li> SUÍNO </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
 
@@ -366,8 +371,9 @@
               <!-- <li> SALADA DE FRUTA </li> -->
               <!-- <li> MINGAU </li> -->
               <!-- <li> MINGAU DE BANANA </li> -->
-              <li> MINGAU DE MUNGUNZÁ </li>
+              <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> MISTO QUENTE </li> -->
+              <li> MINI PIZZA </li>
               <!-- <li> X SALADA </li> -->
               <!-- <li> X BURGUER </li> -->
               <!-- <li> SALADA FRUTA </li> -->
@@ -384,7 +390,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX QUINTA -->
-                26/10
+                09/11
               </a>
             </h3>
             <p>
@@ -401,7 +407,8 @@
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FRUTAS </li> -->
               <!-- <li> MINGAU </li> -->
-              <li> MINGAU DE ARROZ</li>
+              <li> MACAXEIRA </li>
+              <!-- <li> MINGAU DE ARROZ</li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
@@ -439,7 +446,7 @@
               <!-- <li> FRANGO ASSADO DE FORNO</li> -->
               <!-- <li> FRANGO DESFIADO COM LEGUMES</li> -->
               <!-- <li> FRANGO FRITO </li> -->
-              <!-- <li> FRANGO GUISADO </li> -->
+              <li> FRANGO GUISADO </li>
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> GUISADINHO SUÍNO </li> -->
               <!-- <li> HAMBÚRGUER </li> -->
@@ -454,7 +461,7 @@
               <!-- <li> LINGUA AO MOLHO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> OMELETE DE FORNO </li> -->
-              <li> OMELETE </li>
+              <!-- <li> OMELETE </li> -->
               <!-- <li> PANQUECAS </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
@@ -486,7 +493,7 @@
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> MINGAU DE MILHO </li> -->
-              <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
+              <li> MINGAU DE MUNGUNZÁ </li>
               <!-- <li> MINGAU </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO QUENTE</li> -->
@@ -495,7 +502,7 @@
               <!-- <li> SALGADO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO</li> -->
               <!-- <li> TAPIOCA </li> -->
-              <li> TAPIOCA COM CAFÉ</li>
+              <!-- <li> TAPIOCA COM CAFÉ</li> -->
               <!-- <li> X SALADA </li> -->
               <!-- <li> SALADA DE FRUTA </li> -->
             </ul>
@@ -510,7 +517,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX SEXTA -->
-                27/10
+                10/11
 
               </a>
             </h3>
@@ -522,8 +529,9 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
-              <li> FRUTAS </li>
+              <!-- <li> FRUTAS </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
+              <li> FAROFA DE CONSERVA </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
@@ -544,7 +552,7 @@
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> ASSADO DE PANELA </li> -->
-              <!-- <li> BIFE ACEBOLADO </li> -->
+              <li> BIFE ACEBOLADO </li>
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE ASSADA </li> -->
@@ -555,10 +563,10 @@
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> ESCONDIDINHO DE FRANGO </li> -->
-              <li> ESPETINHO MISTO </li>
+              <!-- <li> ESPETINHO MISTO </li> -->
               <!-- <li> ESTROGONOFE DE CARNE </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
-              <!-- <li> FEIJOADA </li> -->
+              <li> FEIJOADA </li>
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
@@ -575,7 +583,7 @@
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
-              <li> LASANHA DE FRANGO </li>
+              <!-- <li> LASANHA DE FRANGO </li> -->
               <!-- <li> MACARRONADA DE CAMARÃO </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
@@ -602,9 +610,10 @@
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
+              <li> FOLHEADO DE QUEIJO COALHO </li>
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
-              <li> MISTO COM OVO </li>
+              <!-- <li> MISTO COM OVO </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PIZZA </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
@@ -624,7 +633,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX SÁBADO -->
-                28/10
+                11/11
 
               </a>
             </h3>
@@ -661,6 +670,7 @@
               <!-- <li> BISTECA SUÍNA </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
+              <li> COSTELA ASSADA </li>
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
@@ -669,13 +679,13 @@
               <!-- <li> FILE DE FRANGO AO MOLHO </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <li> FRANGO ASSADO </li>
+              <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
-              <li> ISCA DE CALABRESA E OVO</li>
+              <!-- <li> ISCA DE CALABRESA E OVO</li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
@@ -683,7 +693,7 @@
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
-              <!-- <li> OMELETE  </li> -->
+              <li> OMELETE  </li>
               <!-- <li> PANQUECAS </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
@@ -702,12 +712,12 @@
               <!-- <li> ABACATADA COM BOLACHA </li> -->
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
-              <li> BISCOITO RECHEADO </li>
+              <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <!-- <li> MISTO QUENTE </li> -->
+              <li> MISTO QUENTE </li>
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO </li> -->
               <!-- <li> PÃO COM OVO </li> -->
@@ -730,7 +740,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX DOMINGO -->
-                29/10
+                12/11
 
               </a>
             </h3>
@@ -744,8 +754,9 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
+              <li> MINGAU DE AVEIA </li>
               <!-- <li> OVO </li> -->
-              <li> OVO COZIDO </li>
+              <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
@@ -767,7 +778,7 @@
               <!-- <li> BISTECA SUÍNA </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE GUISADA COM BATATAS </li> -->
-              <li> CARNE GUISADA </li>
+              <!-- <li> CARNE GUISADA </li> -->
               <!-- <li> CARNE GUISADA COM LEGUMES </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> COSTELA AO MOLHO </li> -->
@@ -787,6 +798,7 @@
               <!-- <li> FRANGO EMPANADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
+              <li> FRANGO PASSARINHO </li>
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
@@ -794,7 +806,8 @@
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <li> MACARRONADA A BOLONHESA </li>
+              <!-- <li> MACARRONADA A BOLONHESA </li> -->
+              <li> MIX (OVO + CALABRESA) </li>
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> OMELETE </li> -->
               <!-- <li> PANQUECA </li> -->
@@ -811,6 +824,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
+              <li> AÇAÍ COM TAPIOCA </li>
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
@@ -819,7 +833,7 @@
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> FAROFA DE OVO </li> -->
               <!-- <li> KIKÃO </li> -->
-              <li> MISTO </li>
+              <!-- <li> MISTO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO </li> -->
@@ -887,7 +901,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXXSEGUNDA 1-->
-                29/10
+                13/11
               </a>
             </h3>
             <p>
@@ -995,7 +1009,7 @@
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
                 <!-- DDDXX TERÇA -->
-                29/10
+                13/11
               </a>
             </h3>
             <p>
@@ -1109,7 +1123,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX QUARTA -->
-                29/10
+                13/11
 
               </a>
             </h3>
@@ -1237,7 +1251,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX QUINTA -->
-                29/10
+                13/11
               </a>
             </h3>
             <p>
@@ -1361,7 +1375,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX SEXTA -->
-                29/10
+                13/11
 
               </a>
             </h3>
@@ -1472,7 +1486,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX SÁBADO -->
-                29/10
+                13/11
 
               </a>
             </h3>
@@ -1577,7 +1591,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX DOMINGO -->
-                29/10
+                13/11
 
               </a>
             </h3>
