--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX SEGUNDA 1-->
-                06/11
+                04/12
               </a>
             </h3>
             <p>
@@ -40,7 +40,7 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
-              <li> CALDO DE OVO </li>
+              <!-- <li> CALDO DE OVO </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
@@ -49,7 +49,7 @@
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
-              <!-- <li> SOPA </li> -->
+              <li> SOPA </li>
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
             </p></br>
@@ -75,6 +75,7 @@
               <!-- <li> FILE DE FRANGO </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO ASSADO </li> -->
+              <li> FILE DE PEITO FRANGO </li>
               <!-- <li> FIGADO ACEBOLADO</li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
@@ -83,7 +84,7 @@
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> FRANGO XADREZ </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
-              <li> GUISADO SUÍNO </li>
+              <!-- <li> GUISADO SUÍNO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA MISTA CALABRESA E FRANGO </li> -->
               <!-- <li> ISCA DE CARNE </li> O </li> -->
@@ -91,12 +92,12 @@
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <!-- <li> ROUPA VELHA </li> -->
+              <li> ROUPA VELHA </li>
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> OVO FRITO E CALABRESA</li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <li> PICADINHO RICO </li>
+              <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> PIRARUCU A MILANESA </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
               <!-- <li> ESTROGONOFE DE CARNE </li> -->
@@ -114,10 +115,10 @@
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
-              <li> CROISSANT MISTO </li>
+              <!-- <li> CROISSANT MISTO </li> -->
               <!-- <li> CUSCUZ COM CAFE E LEITE </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <!-- <li> KIKÃO </li> -->
+              <li> KIKÃO </li>
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> MINGAU DE BANANA </li> -->
@@ -142,7 +143,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
                 
                 <!-- DDDXX TERÇA -->
-                07/11
+                05/12
               </a>
             </h3>
             <p>
@@ -161,9 +162,9 @@
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
-              <li> PANQUECA AMERICANA</li>
+              <!-- <li> PANQUECA AMERICANA</li> -->
               <!-- <li> PUPUNHA </li> -->
-              <!-- <li> QUARENTÃO </li> -->
+              <li> QUARENTÃO </li>
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> QUEIJO </li> -->
               <!-- <li> SALSICHA AO MOLHO </li> -->
@@ -182,6 +183,7 @@
               <!-- <li> BIFE A CAVALO </li> -->
               <!-- <li> BISTECA SUINÁ </li>  -->
               <!-- <li> CARNE AO MOLHO </li> -->
+              <li> CARNE AO MOLHO COM BATATA</li>
               <!-- <li> CARNE GUISADA COM LEGUMES </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> COZIDÃO MANAUARA </li> -->
@@ -194,7 +196,7 @@
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FIGADO ACEBOLADO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <li> FRANGO ASSADO </li>
+              <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO CROCANTE </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
@@ -210,7 +212,8 @@
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> LINGUA AO MOLHO </li> -->
-              <li> MACARRONADA BOLONHESA </li>
+              <!-- <li> MACARRONADA BOLONHESA </li> -->
+              <li> MIX CALABRESA E OVO </li>
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> OMELETE </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
@@ -234,7 +237,7 @@
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO </li> -->
@@ -246,7 +249,7 @@
               <!-- <li> PIT STOP </li> -->
               <!-- <li> SALGADO </li> -->
               <!-- <li> TAPIOCA COM CAFÉ COM LEITE </li> -->
-              <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
+              <li> MINGAU DE MUNGUNZÁ </li>
               <!-- <li> X SALADA </li> -->
             </ul>
             </p>
@@ -260,7 +263,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX QUARTA -->
-                08/11
+                06/12
 
               </a>
             </h3>
@@ -280,12 +283,12 @@
               <!-- <li> MINGAU DE AVEIA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li>; -->
-              <li> OVO FRITO </li>
+              <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PATÊ DE SARDINHA </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <li> QUEIJO E PRESUNTO </li>
               <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> SALSICHA AO MOLHO </li> -->
@@ -304,6 +307,7 @@
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE GUISADA </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
+              <li> CALDEIRADA </li>
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> ESCONDIDINHO DE CARNE </li> -->
@@ -325,7 +329,7 @@
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA MISTA </li> -->
-              <li> ISCA DE FIGADO </li>
+              <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
@@ -337,9 +341,9 @@
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PANQUECAS DE FRANGO </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
+              <li> PICADINHO RICO </li>
               <!-- <li> PIRARUCU A MILANESA </li> -->
-              <li> VACA ATOLADA </li>
+              <!-- <li> VACA ATOLADA </li> -->
               <!-- <li> SUÍNO </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
 
@@ -353,7 +357,7 @@
             <P class="desjejum">LANCHE:</P>
             <ul>
               <!-- <li> AÇAÍ </li> -->
-              <!-- <li> AÇAÍ FARINHA DE TAPIOCA </li> -->
+              <li> AÇAÍ FARINHA DE TAPIOCA </li>
               <!-- <li> BAQUETE </li> -->
               <!-- <li> ABACATADA COM BOLACHA </li> -->
               <!-- <li> BAGUETE </li> -->
@@ -373,7 +377,7 @@
               <!-- <li> MINGAU DE BANANA </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> MISTO QUENTE </li> -->
-              <li> MINI PIZZA </li>
+              <!-- <li> MINI PIZZA </li> -->
               <!-- <li> X SALADA </li> -->
               <!-- <li> X BURGUER </li> -->
               <!-- <li> SALADA FRUTA </li> -->
@@ -390,7 +394,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX QUINTA -->
-                09/11
+                07/12
               </a>
             </h3>
             <p>
@@ -399,7 +403,8 @@
               <li> PÃO FRANCÊS </li>
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
-              <!-- <li> BANANA COZIDA </li> -->
+
+              <li> BANANA COZIDA </li>
               <!-- <li> BATATA DOCE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> CARÁ COZIDO </li> -->
@@ -407,7 +412,7 @@
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FRUTAS </li> -->
               <!-- <li> MINGAU </li> -->
-              <li> MACAXEIRA </li>
+              <!-- <li> MACAXEIRA </li> -->
               <!-- <li> MINGAU DE ARROZ</li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
@@ -445,8 +450,8 @@
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO ASSADO DE FORNO</li> -->
               <!-- <li> FRANGO DESFIADO COM LEGUMES</li> -->
-              <!-- <li> FRANGO FRITO </li> -->
-              <li> FRANGO GUISADO </li>
+              <li> FRANGO FRITO </li>
+              <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> GUISADINHO SUÍNO </li> -->
               <!-- <li> HAMBÚRGUER </li> -->
@@ -459,13 +464,14 @@
               <!-- <li> LASANHA DE FRANGO </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> LINGUA AO MOLHO </li> -->
+              <li> MACARRONADA </li>
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> OMELETE DE FORNO </li> -->
               <!-- <li> OMELETE </li> -->
               <!-- <li> PANQUECAS </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <li> PEIXE </li>
+              <!-- <li> PEIXE </li> -->
               <!-- <li> PEITO DE FRANGO </li> -->
               <!-- <li> PIRARUCU DESFIADO </li> -->
               <!-- <li> PIRARUCU MILANESA </li> -->
@@ -491,9 +497,9 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <!-- <li> MISTO QUENTE </li> -->
+              <li> MISTO QUENTE </li>
               <!-- <li> MINGAU DE MILHO </li> -->
-              <li> MINGAU DE MUNGUNZÁ </li>
+              <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> MINGAU </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO QUENTE</li> -->
@@ -517,7 +523,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX SEXTA -->
-                10/11
+                08/12
 
               </a>
             </h3>
@@ -529,9 +535,9 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
-              <!-- <li> FRUTAS </li> -->
+              <li> FRUTAS </li>
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <li> FAROFA DE CONSERVA </li>
+              <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
@@ -552,7 +558,7 @@
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> ASSADO DE PANELA </li> -->
-              <li> BIFE ACEBOLADO </li>
+              <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE ASSADA </li> -->
@@ -566,7 +572,7 @@
               <!-- <li> ESPETINHO MISTO </li> -->
               <!-- <li> ESTROGONOFE DE CARNE </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
-              <li> FEIJOADA </li>
+              <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
@@ -583,7 +589,7 @@
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
-              <!-- <li> LASANHA DE FRANGO </li> -->
+              <li> LASANHA DE FRANGO </li>
               <!-- <li> MACARRONADA DE CAMARÃO </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
@@ -594,6 +600,7 @@
               <!-- <li> PIRARUCU A CASACA </li> -->
               <!-- <li> RODIZIO DE MASSAS </li> -->
               <!-- <li> STROGONOFF DE FRANGO </li> -->
+              <li> VACA ATOLADA </li>
               <!-- <li> YAKISOBA </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
 
@@ -610,14 +617,14 @@
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <li> FOLHEADO DE QUEIJO COALHO </li>
+              <!-- <li> FOLHEADO DE QUEIJO COALHO </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> MISTO COM OVO </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PIZZA </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <!-- <li> SALGADO </li> -->
+              <li> SALGADO </li>
               <!-- <li> SALADA DE FRUTA </li> -->
               <!-- <li> X AMERICANO </li> -->
               <!-- <li> X SALADA </li> -->
@@ -633,7 +640,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX SÁBADO -->
-                11/11
+                09/12
 
               </a>
             </h3>
@@ -740,7 +747,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX DOMINGO -->
-                12/11
+                10/12
 
               </a>
             </h3>
@@ -901,7 +908,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXXSEGUNDA 1-->
-                13/11
+                10/12
               </a>
             </h3>
             <p>
@@ -1009,7 +1016,7 @@
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
                 <!-- DDDXX TERÇA -->
-                13/11
+                10/12
               </a>
             </h3>
             <p>
@@ -1123,7 +1130,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX QUARTA -->
-                13/11
+                10/12
 
               </a>
             </h3>
@@ -1251,7 +1258,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX QUINTA -->
-                13/11
+                10/12
               </a>
             </h3>
             <p>
@@ -1375,7 +1382,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX SEXTA -->
-                13/11
+                10/12
 
               </a>
             </h3>
@@ -1486,7 +1493,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX SÁBADO -->
-                13/11
+                10/12
 
               </a>
             </h3>
@@ -1591,7 +1598,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DDDXX DOMINGO -->
-                13/11
+                10/12
 
               </a>
             </h3>
